# demo_template

./: CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
main/headers/: main.hpp
main/sources/: main.cpp
src/assets/shaders/: color.frag  vertex_color.vert
src/headers/: files.hpp  font.hpp  log.hpp  main.hpp  shader.hpp  texture.hpp
src/sources/: log.cpp  main.cpp
